--- a/client/package.json
+++ b/client/package.json
@@ -20,5 +20,9 @@
 		"tailwindcss": "^3.4.15",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"axios": "^1.7.8",
+		"lucide-svelte": "^0.461.0"
 	}
 }
