--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
+		"flowbite": "^2.5.2",
+		"flowbite-svelte": "^0.47.3",
 		"postcss": "^8.4.49",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -23,6 +25,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.8",
-		"lucide-svelte": "^0.461.0"
+		"lucide-svelte": "^0.461.0",
+		"plyr": "^3.7.8"
 	}
 }
